--- a/gb/21/9/20/n13246060.md
+++ b/gb/21/9/20/n13246060.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vuwsmg331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵是“来自天上的抚慰” 专业摄影师感动</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13246087-210919175957100766-600x400.jpg" />
 <h6>摄影师Deanne Peterson（右）和母亲于9月19日下午一同观赏了神韵纽约艺术团在德州休斯顿沃瑟姆剧院（Wortham Center Brown Theater）的第三场演出。（吴香莲／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年09月20日讯】（大纪元记者吴香莲美国休斯顿报导）虽然已经多次观赏过，但专业摄影师Deanne Peterson女士再看<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出还是兴奋不已，“每次看都觉得新奇有趣，无论是天幕特效，还是中西合璧的乐团，都令我惊喜。”</p>
-<p>Peterson是一名野生动物摄影师，2021年9月19日下午，她和母亲一起观看了<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E4%BC%91%E6%96%AF%E9%A1%BF%E6%B2%83%E7%91%9F%E5%A7%86%E5%89%A7%E9%99%A2.md#1">休斯顿沃瑟姆剧院</a>（HOUSTON Wortham Center Brown Theater）的第三场演出后依然意犹未尽。她说，“我们几年来一直观看神韵，只要神韵来休斯顿，我一定买票。神韵每年都制作一套全新的节目，全新的音乐，全新的编舞和背景天幕。当然，每场演出都带给我满满的惊喜和感动。”</p>
-<p>Peterson称赞：“音乐、服装、所有的一切都光彩夺目，<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员的技术水平非常高，我们今天能再次来观赏真是三生有幸！”</p>
-<p>她还对神韵的<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>赞叹不已，“天幕的构思太有创意了，与舞台情节结合得相当完美，衔接的不可思议的准确。”</p>
-<p>另一个让Peterson觉得很不可思议的是神韵可以用<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>讲故事，她说：“这里有圣洁的天国圣境，有英雄的传奇故事，都是我闻所未闻的。”</p>
-<p>早年她曾是舞蹈演员，完全了解舞蹈训练的艰辛。“我知道神韵舞蹈演员经过了日复一日长时间的刻苦训练，以及对身体运动细节的精雕细琢，才能做到如此完美。”</p>
+	<p>【大纪元2021年09月20日讯】（大纪元记者吴香莲美国休斯顿报导）虽然已经多次观赏过，但专业摄影师Deanne Peterson女士再看<ahref="https://www.shenyunperformingarts.org/" target="_blank" rel="noopener noreferrer">神韵</a>演出还是兴奋不已，“每次看都觉得新奇有趣，无论是天幕特效，还是中西合璧的乐团，都令我惊喜。”</p>
+<p>Peterson是一名野生动物摄影师，2021年9月19日下午，她和母亲一起观看了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%91%E6%96%AF%E9%A1%BF%E6%B2%83%E7%91%9F%E5%A7%86%E5%89%A7%E9%99%A2.md#1">休斯顿沃瑟姆剧院</a>（HOUSTON Wortham Center Brown Theater）的第三场演出后依然意犹未尽。她说，“我们几年来一直观看神韵，只要<ahref="https://www.youtube.com/c/shenyun" target="_blank" rel="noopener noreferrer">神韵</a>来休斯顿，我一定买票。<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>每年都制作一套全新的节目，全新的音乐，全新的编舞和背景天幕。当然，每场演出都带给我满满的惊喜和感动。”</p>
+<p>Peterson称赞：“音乐、服装、所有的一切都光彩夺目，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员的技术水平非常高，我们今天能再次来观赏真是三生有幸！”</p>
+<p>她还对神韵的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>赞叹不已，“天幕的构思太有创意了，与舞台情节结合得相当完美，衔接得不可思议的准确。”</p>
+<p>另一个让Peterson觉得很不可思议的是神韵可以用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>讲故事，她说：“这里有圣洁的天国圣境，有英雄的传奇故事，都是我闻所未闻的。”</p>
+<p>早年她曾是舞蹈演员，完全了解舞蹈训练的艰辛。“我知道<ahref="http://ShenYun.com" target="_blank" rel="noopener noreferrer">神韵舞蹈</a>演员经过了日复一日长时间的刻苦训练，以及对身体运动细节的精雕细琢，才能做到如此完美。”</p>
 <p>她表示，神韵让她的心灵感到来自天上的抚慰，“在繁忙的日常生活中，你需要静下来品味有深度的艺术，让自己的心灵得到净化，神韵不是普通的娱乐演出，她能净化心灵，给人抚慰。”</p>
 <p>责任编辑：夏晶</p>
 	
@@ -19,43 +19,42 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/9/n13148726.md#1">神韵展现传统文化 军工公司副总裁赞美丽纷呈</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/5/n13211355.md#1">神韵传达神的引导 跨国企业副总裁深受感动</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244335.md#1">神韵带来希望 前警察局长赞佩演出令人升华</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244489.md#1">神韵美声唱法出类拔萃 健康安全专家折服</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244773.md#1">神韵充满强大的慈悲 儿童医院经理感激落泪</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/20/n13246055.md#1">神韵顶尖一流 诊所老板赞传统价值不可或缺</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/9/n13148726.md#1">神韵展现传统文化 军工公司副总裁赞美丽纷呈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211355.md#1">神韵传达神的引导 跨国企业副总裁深受感动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/18/n13244335.md#1">神韵带来希望 前警察局长赞佩演出令人升华</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/19/n13244489.md#1">神韵美声唱法出类拔萃 健康安全专家折服</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/19/n13244773.md#1">神韵充满强大的慈悲 儿童医院经理感激落泪</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/10/n13225261.md#1">【未解之谜】轰动日本 甲府UFO事件</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245201.md#1">【马克时空】澳洲改买美核潜艇 维吉尼亚级核潜艇有多牛</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1">【横河观点】世界为何对中共移植黑幕沉默？</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟四大趋势</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242696.md#1">研究：降低蛋白质出错有助延长寿命</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239594.md#1">周星驰为何不再演戏？徐峥王晶析背后原因</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239828.md#1">张哲瀚事件后 朱一龙亦因旧照遭小粉红狂轰</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242350.md#1">范冰冰40岁生日 罕见晒与家人合照</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242592.md#1">杨紫琼晒《尚气》花絮照 大赞梁朝伟和元华</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13241083.md#1">龙劭华灵堂开放亲友吊唁 9月22日办告别式</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242154.md#1">维生素D有4大抗癌功效 补D防癌注意1关键</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240906.md#1">大陆女子藉网路摄影机 目击英国尼斯湖水怪</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242435.md#1">以色列：打疫苗突破感染风险 是自然感染13倍</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240582.md#1">爱尔兰男子离职 最后薪资竟是30公斤重硬币</a></li>
-<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13246060.htm">神韵是“来自天上的抚慰” 专业摄影师感动</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13246060.htm">神韵是“来自天上的抚慰” 专业摄影师感动</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vuwsmg331/djy/blob/master/gb/21/9/20/n13246060.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/20/n13246060.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
